@startuml classesDiagram

class Led {
  - pin: byte
  - state: byte
  - isOn: bool
  - blinkMillis: unsigned int
  - previousMillis: unsigned long
  + {static} STATE_OFF: byte
  + {static} STATE_ON: byte
  + {static} STATE_BLINK: byte
  + Led(pin: byte)
  + setState(state: byte): void
  + getState(): byte
  + setBlinksPerSecond(blinksPerSecond: byte): void
  + touch(): void
  - turnOn(): void
  - turnOff(): void
}

class LedsModule {
  - NUMBER_LEDS: const byte
  - leds: Led[3]
  + turnOff(): void
  + turnOn(): void
  + setBlinkPerSeconds(blinksPerSecond: byte): void
  + touch(): void
}

class UltrasonicSensor {
  - triggerPin: int
  - echoPin: int
  - distance: int
  - readUltrasonicTime(): long
  + UltrasonicSensor(triggerPin: int, echoPin: int)
  + readCentimeters(): long
  + readInches(): long
}

LedsModule *-- "3" Led : contains
projectCode ..> LedsModule : uses
projectCode ..> UltrasonicSensor : uses

@enduml